--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,3 +43,58 @@ body {
 .buttons {
     min-height:4.4vh;
 }
+
+
+/* HelpModal styles */
+.help-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  max-width: 500px;
+  width: 100%;
+}
+
+
+
+
+.help-modal .modal-content h2 {
+  margin-bottom: 10px;
+  font-size: 24px;
+}
+
+.help-modal .modal-content p {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+.help-list {
+  list-style: none;
+  padding: 0;
+  margin: 20px 0;
+}
+
+.help-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.help-item .icon {
+  margin-right: 15px;
+}
+
+.help-text {
+  font-size: 16px;
+}
